# Ph2_ACF

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .lfsconfig  1q  CHANGELOG  CMakeLists.txt  Makefile  README.md  README_FOR_GIT.txt  beam.conf  comp.sh  dsd  euTelescopeInit.ini  eudaq_start.sh  eudet_one-DC.conf  example.conf  runMiniDAQ.sh  setup.sh  setup_ots.sh  telescope.ini  testParameters.txt
DQMUtils/: CBCHistogramPulseShape.cc  CBCHistogramPulseShape.h  CBCHistogramTornadoPlot.cc  CBCHistogramTornadoPlot.h  CMakeLists.txt  DQMEvent.cc  DQMEvent.h  DQMHistogramBase.h  DQMHistogramCalibration.cc  DQMHistogramCalibration.h  DQMHistogramCalibrationExample.cc  DQMHistogramCalibrationExample.h  DQMHistogramLatencyScan.cc  DQMHistogramLatencyScan.h  DQMHistogramPedeNoise.cc  DQMHistogramPedeNoise.h  DQMHistogramPedestalEqualization.cc  DQMHistogramPedestalEqualization.h  DQMHistogramSSASCurveAsync.cc  DQMHistogramSSASCurveAsync.h  DQMHistogramSignalScanFit.cc  DQMHistogramSignalScanFit.h  DQMHistogramTPCalibration.cc  DQMHistogramTPCalibration.h  DQMHistogrammer.cc  DQMHistogrammer.h  DQMInterface.cc  DQMInterface.h  RD53ADCHistogramHistograms.cc  RD53ADCHistogramHistograms.h  RD53ADCPowerSupplyHistograms.cc  RD53ADCPowerSupplyHistograms.h  RD53ADCScanHistograms.cc  RD53ADCScanHistograms.h  RD53BCapMeasureHistograms.cc  RD53BCapMeasureHistograms.h  RD53BCapMeasureResults.cc  RD53BCapMeasureResults.h  RD53BERtestHistograms.cc  RD53BERtestHistograms.h  (+60 more)
HWDescription/: ATLASRegisters.h  BeBoard.cc  BeBoard.h  CMakeLists.txt  CROCRegisters.cc  CROCRegisters.h  Cbc.cc  Cbc.h  Chip.cc  Chip.h  ChipRegItem.h  Cic.cc  Cic.h  Definition.h  FrontEndDescription.cc  FrontEndDescription.h  Hybrid.cc  Hybrid.h  MPA.cc  MPA.h  Makefile  Module.cc  Module.h  OpticalGroup.cc  OpticalGroup.h  OuterTrackerHybrid.cc  OuterTrackerHybrid.h  OuterTrackerModule.cc  OuterTrackerModule.h  RD53.cc  RD53.h  RD53B.cc  RD53B.h  RD53BATLASRegisters.cc  RD53BATLASRegisters.h  RD53BCMSRegisters.cc  RD53BCMSRegisters.h  RD53BCommands.cpp  RD53BCommands.h  RD53BConstants.cpp  (+23 more)
HWInterface/: BackendAlignmentInterface.cc  BackendAlignmentInterface.h  BeBoardFWInterface.cc  BeBoardFWInterface.h  BeBoardInterface.cc  BeBoardInterface.h  CMakeLists.txt  Cbc3Fc7FWInterface.cc  Cbc3Fc7FWInterface.h  CbcInterface.cc  CbcInterface.h  ChipInterface.cc  ChipInterface.h  CicInterface.cc  CicInterface.h  CtaFWInterface.cc  CtaFWInterface.h  CtaFpgaConfig.cc  CtaFpgaConfig.h  D19cFWInterface.cc  D19cFWInterface.h  D19cFpgaConfig.cc  D19cFpgaConfig.h  D19clpGBTInterface.cc  D19clpGBTInterface.h  DPInterface.cc  DPInterface.h  FC7FWInterface.cc  FC7FWInterface.h  Firmware.cc  Firmware.h  FpgaConfig.cc  FpgaConfig.h  GbtInterface.cc  GbtInterface.h  GlibFWInterface.cc  GlibFWInterface.h  GlibFpgaConfig.h  ICFc7FWInterface.cc  ICFc7FWInterface.h  (+30 more)
NetworkUtils/: CMakeLists.txt  TCPClient.cc  TCPClient.h  TCPClientBase.cc  TCPClientBase.h  TCPNetworkClient.cc  TCPNetworkClient.h  TCPPacket.cc  TCPPacket.h  TCPPublishServer.cc  TCPPublishServer.h  TCPReceiverSocket.cc  TCPReceiverSocket.h  TCPServer.cc  TCPServer.h  TCPServerBase.cc  TCPServerBase.h  TCPSocket.cc  TCPSocket.h  TCPSubscribeClient.cc  TCPSubscribeClient.h  TCPTransceiverSocket.cc  TCPTransceiverSocket.h  TCPTransmitterSocket.cc  TCPTransmitterSocket.h
SlowControlMonitor/: CMakeLists.txt  SlowControlMonitorController.cc  SlowControlMonitorInterface.cc  SlowControlMonitorInterface.h
System/: CMakeLists.txt  FileParser.cc  FileParser.h  SystemController.cc  SystemController.h
Utils/: ANSIColors.h  CBCChannelGroupHandler.cc  CBCChannelGroupHandler.h  CMakeLists.txt  CRCCalculator.cc  CRCCalculator.h  Cbc2Event.cc  Cbc2Event.h  Cbc3Event.cc  Cbc3Event.h  ChannelGroupHandler.cc  ChannelGroupHandler.h  CommonVisitors.h  ConditionDataSet.h  Containable.h  Container.cc  Container.h  ContainerFactory.cc  ContainerFactory.h  ContainerRecicleBin.h  ContainerRecycleBin.h  ContainerStream.h  D19cCbc3Event.cc  D19cCbc3Event.h  D19cCbc3EventZS.cc  D19cCbc3EventZS.h  D19cCic2Event.cc  D19cCic2Event.h  D19cCicEvent.cc  D19cCicEvent.h  D19cMPAEvent.cc  D19cMPAEvent.h  D19cMPAEventAS.cc  D19cMPAEventAS.h  D19cSSAEvent.cc  D19cSSAEvent.h  D19cSSAEventAS.cc  D19cSSAEventAS.h  Data.cc  Data.h  (+91 more)
Utils/BitSerialization/: Core.hpp  Errors.hpp  Printing.hpp  Results.hpp  Utility.hpp  (+1 more)
miniDAQ/: CMSIT_miniDAQ.cc  CMakeLists.txt  DQMController.cc  DQMHistogramController.cc  DQMHistogramController.h  DQMHistogrammer.cc  DQMInterface.cc  DQMInterface.h  Makefile  MiddlewareController.cc  MiddlewareController.h  PowerSupplyController.cc  PowerSupplyInterface.cc  PowerSupplyInterface.h  RunController.cc  miniDAQ.cc  miniDQM.cc  miniSLinkDQM.cc
src/: AlignmentExample.cc  CMSIT_miniDAQ.cc  CMSITminiDAQ.cc  CMakeLists.txt  DAQWS.cc  DataPlayer.cc  ITchipTesting.cc  InjectedSCurve.cc  MPA_async_test.cc  MPA_sync_test.cc  MPAlatency.cc  Makefile  NoiseSCurve.cc  PSROHTest.cc  Pedagogical.cc  PowerExample.cc  PowerExampleMPA.cc  RD53BRadScan.~cc  RD53BminiDAQ.cc  RD53calibration_example.cc  ROHTest.cc  SEHTest.cc  SSALatencyScanner.cc  SSATEST.cc  SSAcalibrate.cc  SSAlatency.cc  SSAscurve.cc  SSAshortfind.cc  SyncExample.cc  Test_SSA.cc  TwoStripAlignment.cc  TwoStripAlignment_done.cc  WhatIsGoingOn.cc  calibrate.cc  calibrate_SSAtest.cc  calibration_example.cc  cbc3irrad.cc  cic_datatest.cc  cic_test.cc  cmtest.cc  (+29 more)
tools/: AntennaTester.cc  AntennaTester.h  BackEndAlignment.cc  BackEndAlignment.h  BiasSweep.cc  BiasSweep.h  CBCMonitor.cc  CBCMonitor.h  CBCPulseShape.cc  CBCPulseShape.h  CBCTornadoPlot.cc  CBCTornadoPlot.h  CMFits.h  CMTester.cc  CMTester.h  CMakeLists.txt  Calibration.cc  Calibration.h  CalibrationExample.cc  CalibrationExample.h  Channel.cc  Channel.h  CicFEAlignment.cc  CicFEAlignment.h  CombinedCalibration.h  DataChecker.cc  DataChecker.h  DetectorMonitor.cc  DetectorMonitor.h  Eudaq2Producer.cc  Eudaq2Producer.h  ExtraChecks.cc  ExtraChecks.h  EyeScanOptimization.cc  EyeScanOptimization.h  HybridTester.cc  HybridTester.h  LatencyScan.cc  LatencyScan.h  LpGBTTester.cc  (+151 more)
(+262 files in other folders)
